@@ -566,7 +566,6 @@ Please check the URL you used to access this page.",
 'loadhist'		=> 'Loading page history',
 'currentrev'	=> 'Current revision',
 'revisionasof'          => 'Revision as of $1',
-'oldrevisionnavigation' => 'Revision as of $1; $5<br />($6) $3 | $2 | $4 ($7)',
 'previousrevision'	=> '←Older revision',
 'nextrevision'		=> 'Newer revision→',
 'currentrevisionlink'   => 'Current revision',
